Bug 466796 - Opening search sometimes messes up layout (sidebar sizes)
Summary: Opening search sometimes messes up layout (sidebar sizes)
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 22.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-03 22:05 UTC by Christian (Fuchs)
Modified: 2023-03-04 10:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments
Video of the issue, first half is as it should be, second half is the bug (440.40 KB, video/x-matroska)
2023-03-03 22:05 UTC, Christian (Fuchs)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2023-03-03 22:05:45 UTC
Created attachment 156976 [details]
Video of the issue, first half is as it should be, second half is the bug

SUMMARY
Opening the search bar in dolphin sometimes messes up your layout (the width of the sidebars) and doesn't restore them after closing the search, so you need to manually re-adjust them every time

STEPS TO REPRODUCE
1. Open dolphin
2. Have at least one sidebar
3. Seems to be easier to reproduce in a folder with many items
4. Open the search

OBSERVED RESULT
Your preferred layout (e.g. sidebar width) is modified, sidebars are being made a lot thinner  (second half of video)

EXPECTED RESULT
Your preferred layout stays as is, and the search doesn't take more space than it is allowed to (first half of video)

Operating System: Fedora Linux 37
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.14-200.fc37.x86_64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i5-8365U CPU @ 1.60GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20NQS5TD01
System Version: ThinkPad X390 Yoga
Comment 1 Bug Janitor Service 2023-03-03 23:11:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/520
Comment 2 Ismael Asensio 2023-03-04 10:36:54 UTC
Git commit ba60b6ada3121389dcd4ee51aaa9067d681b187a by Ismael Asensio.
Committed on 04/03/2023 at 10:30.
Pushed by iasensio into branch 'master'.

search: Prevent the search box from enlarging the view

By default, the search filters widget calculates its
`minimumSizeHint` as the sum of its components' minimum widths.

This minimum width hint will scale up the widgets hierarchy,
finally imposing a minimum width to the contents view, which
in certain conditions can take the space from the side panels.

Let's set a minimum width hint of 0, so it is the filters widget
which always adapts to the available view size instead.
FIXED-IN: 23.04

M  +5    -0    src/search/dolphinfacetswidget.cpp
M  +2    -0    src/search/dolphinfacetswidget.h

https://invent.kde.org/system/dolphin/commit/ba60b6ada3121389dcd4ee51aaa9067d681b187a